Small rephrasing in the hungarian locale

--- a/frontend/public/locales/locale-hu.json
+++ b/frontend/public/locales/locale-hu.json
@@ -14,7 +14,7 @@
     "report": "Jelentés",
     "dismiss": "Elutasítás",
     "revokeStrike": "Strike visszavonása",
-    "giveStrike": "Strike adása",
+    "giveStrike": "Strike kiosztása",
     "reopen": "Újranyitás"
   },
   "common": {
