Added a badge that shows the strike count of a user

--- a/frontend/public/locales/locale-en.json
+++ b/frontend/public/locales/locale-en.json
@@ -264,6 +264,7 @@
     },
     "newStory": {
       "title": "New Story",
+      "strike": "out of 3 strikes received",
       "tabs": {
         "write": "Write",
         "preview": "Preview",
